--- a/task3/index.css
+++ b/task3/index.css
@@ -1,9 +1,10 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
-    background-image: url("images/table.png");
-    background-size: cover;
+    /* background: url("img/bg.jpg") center/cover no-repeat; */
+    /* background: linear-gradient(navy, pink)fixed;
+    background-size: cover;  */
     font-weight: bold;
-    color: white;
+    /* color: white; */
     text-align: center;
 }
 
@@ -28,4 +29,71 @@ button {
     border-radius: 2px;
     margin-bottom: 2px;
     margin-top: 2px;
+    opacity: 1;
+}
+
+button.transition{
+    transition: 3s;
+    opacity: 0
+}
+
+/* .container{
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-evenly;
+} */
+
+.header-el{
+    display: flex;
+    justify-content: space-around;
+}
+.header-el h1{
+text-transform:uppercase;
+font: 700 300% sans-serif;
+width: auto;
+color: black;
+border: solid 4px #f023;
+}
+ul{
+display:flex;
+justify-content: space-around;
+align-items: center;
+text-transform:uppercase;
+margin: 20px 0;
+width: 60%;
+background: #f023;
+font: 200 100% sans-serif;
+list-style-type: none;
+}
+
+li a{
+    color: black;
+    text-decoration: none;
+}a:hover{
+color: white;
+font-weight: bolder;
+text-shadow: 2px 1px 2px black;
+}
+
+@media(max-width:768px) {
+    .header-el {
+        display : block;
+     
+    }
+    ul{
+        display : block;
+        justify-content: space-around;
+       
+    }
+    a{
+        text-decoration: none;
+        margin: 10px 0;
+        color:azure
+    }
+    li{
+        margin: 5px 0;
+        padding: 3px;
+        color:azure; 
+        align-items: right;
+    }
 }
